discussion/kv_engine/182820/182820_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit '705e5c7f8' into 'couchbase/master'

No changes from

daemon/protocol/mcbp/sasl_auth_command_context.cc

Only the test is merged forward

tests/testapp/testapp_sasl.cc

* commit '705e5c7f8':
  MB-52143: Reject SaslStep if not preceded by SaslAuth

Change-Id: I15bae5537dc2e2288d9930c0a8e3b58a86e3f270

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-16 11:43:11.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-16 12:03:09.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21861/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:14:10: error: "cbcrypto/cbcrypto.h" file not found [clang-diagnostic-error]
#include <cbcrypto/cbcrypto.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21861/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
error: "cbcrypto/cbcrypto.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21861/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51139/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_sasl.cc(14): fatal error C1083: Cannot open include file: "cbcrypto/cbcrypto.h": No such file or directory ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51139/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11678/ : FAILURE

Compile error at [2022-11-16T11:54:04.829Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: cbcrypto/cbcrypto.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11678/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23365/ : FAILURE

Compile error at [2022-11-16T11:56:27.883Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: "cbcrypto/cbcrypto.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23365/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11589/ : FAILURE

Compile error at [2022-11-16T11:49:15.958Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: "cbcrypto/cbcrypto.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11589/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24321/ : FAILURE

Compile error at [2022-11-16T11:56:47.713Z] ../kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: cbcrypto/cbcrypto.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24321/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23906/ : FAILURE

Compile error at [2022-11-16T11:53:37.630Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: cbcrypto/cbcrypto.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23906/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32326/ : FAILURE

Compile error at [2022-11-16T11:56:24.854Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: "cbcrypto/cbcrypto.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32326/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25155/ : FAILURE

Compile error at [2022-11-16T11:50:21.657Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: "cbcrypto/cbcrypto.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25155/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/618/ : FAILURE

Compile error at [2022-11-16T11:48:19.120Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp/testapp_sasl.cc:14:10:
fatal error: cbcrypto/cbcrypto.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/618/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42916/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21216/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
